# ros2-galactic-analysis

./: .gitignore  README.md  analysis-sub4_1KB.html  analysis.ipynb  architecture.ipynb  loop_back_host_setup.zsh  loop_back_remote_setup.zsh  lttng_session.zsh  remote_publisher_setup.bash  remote_publisher_setup.zsh  remote_subscriber_setup.bash  remote_subscriber_setup.zsh  set_condition.bash  set_condition.zsh  start_app.zsh
setup_scripts/: chain_pubsub_setup.zsh  loop_back_host_setup.zsh  loop_back_remote_setup.zsh  remote_publisher_setup.bash  remote_publisher_setup.zsh  set_condition.bash  set_condition.zsh
src/chain_pubsub/: CMakeLists.txt  package.xml
src/chain_pubsub/src/: chain_pubsub.cpp
src/launch/: chain_pubsub_launch.py  loop_back_host_launch.py  loop_back_launch.py  loop_back_remote_launch.py  pubsub_sub16_launch.py  pubsub_sub1_launch.py  pubsub_sub2_launch.py  pubsub_sub32_launch.py  pubsub_sub4_launch.py  pubsub_sub8_launch.py  remote_pubsub_launch.py
src/loop_back/: CMakeLists.txt  package.xml
src/loop_back/src/: host_publisher_member_function.cpp  host_subscriber_member_function.cpp  remote_member_function.cpp
src/pubsub/: CMakeLists.txt  package.xml
src/pubsub/src/: publisher_member_function.cpp  (+3 more)
src/remote-pubsub/: CMakeLists.txt  package.xml
src/remote_pubsub/: CMakeLists.txt
src/time_interface/: CMakeLists.txt  package.xml
test_script/: eprosima_extracted_graph_generater.sh  offwake_graph_generator.sh  oncpu_graph_generator.sh  perf_record.sh  perf_record_and_report_all.sh  top.sh  top_1min.sh  top_result_shaping.sh
(+7 files in other folders)
